<resources>
    <string name="app_name">安徽电信ANO</string>
    <string name="app_tittle">安徽电信ANO</string>
    <string name="cellphone">手机号</string>
    <string name="title_order">订单</string>
    <string name="order_meidenglu">您还没有登录,请登录后查看订单</string>
    <string name="order_Building_location">楼宇名称</string>
    <string name="order_Building_layers">选择楼宇层数</string>
    <string name="order_Current_layer">当前层数</string>
    <string name="shi">市</string>
    <string name="quxian">区县</string>
    <string name="wanggeid">网格ID</string>
    <string name="wangedanyuanmingchen">网格单元名称</string>
    <string name="wanggedanyuanxiaolei">网格单元小类</string>
    <string name="wangluoredianleixing">网络热点类型</string>
    <string name="wanggesangaoleixing">网格三高类型</string>
    <string name="wanggezhuhushu">网格住户数</string>
    <string name="wanggedianxinyonghushu">网格电信用户数</string>
    <string name="wanggeruzhubili">网格入住比例</string>
    <string name="louyushifenfugaibili">网格室分覆盖比例</string>
    <string name="mrshineifugaizhiliang">mr室内覆盖质量</string>
    <string name="lteshineifugaizhiliang">4g室内覆盖质量</string>
    <string name="xinxilaiyuan">信息来源</string>
    <string name="wanggejianzuwuleixing">网格建筑物类型</string>
    <string name="shifouyiyoushifenguihua">是否已有室分规划</string>
    <string name="shifouyouyiwangshifen">是否有异网室分</string>
    <string name="shifouyoudianti">是否有电梯</string>
    <string name="shifouyoudixiatingchechang">是否有地下停车场</string>
    <string name="gengxinriqi">更新日期</string>
    <string name="beizhu">备注</string>
    <string name="order_upload_data">上传数据</string>
    <string name="photo">拍照</string>
    <string name="shineng">室内场景</string>
    <string name="shiwai">室外场景</string>
    <string name="menpaihao">门牌号</string>
    <string name="jutimenpaihao">请输入具体门牌号</string>
    <string name="problemdes">问题描述</string>
    <string name="jutilouyumingchen">具体楼宇名称</string>
    <string name="MultiAutoCompleteTextView">请描述问题，例如语音掉话，上网慢，玩游戏掉线等具体问题现象</string>
    <string name="mCellIdentityCdma_mLatitude">纬度</string>
    <string name="mCellIdentityCdma_mLongitude">经度</string>
    <string name="mCellIdentityCdma_mBasestationId">BID</string>
    <string name="mCellIdentityCdma_mSystemId">SID</string>
    <string name="mCellIdentityCdma_mNetworkId">NID</string>
    <string name="mCellSignalStrengthCdma_mCdmaDbm">2G RX</string>
    <string name="mCellSignalStrengthCdma_mCdmaEcio">2G EC/IO</string>
    <string name="mCellSignalStrengthCdma_mEvdoDbm">3G DBM</string>
    <string name="mCellSignalStrengthCdma_mEvdoEcio">3G EC/IO</string>
    <string name="mCellSignalStrengthCdma_mEvdoSnr">3G SNR</string>
    <string name="mCellIdentityCdma_mRegistered">注册小区</string>
    <string name="mCellIdentityCdma_mTimeStamp">时间</string>
    <string name="mCellIdentityCdma_mTimeStampType">时间类型</string>
    <string name="mCellIdentityLte_mCi">LTE CI</string>
    <string name="mCellIdentityLte_mEarfcn">LTE 频点</string>
    <string name="mCellIdentityLte_mMcc">LTE MCC</string>
    <string name="mCellIdentityLte_mMnc">LTE MNC</string>
    <string name="mCellIdentityLte_mPci">LTE PCI</string>
    <string name="mCellIdentityLte_mTac">LTE TAC</string>
    <string name="mCellSignalStrengthLte_mCqi">LTE CQI</string>
    <string name="mCellSignalStrengthLte_mRsrp">LTE RSRP</string>
    <string name="mCellSignalStrengthLte_mRsrq">LTE RSRQ</string>
    <string name="mCellSignalStrengthLte_mRssnr">LTE SNR</string>
    <string name="mCellSignalStrengthLte_mSignalStrength">LTE 强度</string>
    <string name="mCellSignalStrengthLte_mTimingAdvance">LTE </string>
    <string name="button">测速</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shifouyoutieta">是否有铁塔</string>
    <string name="shifouyouganlu">是否有杆路</string>
    <string name="shifouyouguihua">是否有规划</string>
    <string name="shifouyouyiwangxinhao">是否有异网信号</string>
    <string name="qingshurulouyumingcheng">请输入楼宇名称</string>
    <string name="xinxi">手机信息</string>
    <string name="cesu">测试网速</string>
    <string name="banbeng">V 1.0.0</string>
    <string name="shoujipinpai">手机品牌</string>
    <string name="shoujixinghao">手机型号</string>
    <string name="shoujibanben">手机版本</string>
    <string name="yingjianbanben">硬件版本</string>
    <string name="xitongbanben">系统版本</string>
    <string name="shoujidianliang">手机电量</string>
    <string name="wangluoleixing">网络类型</string>
    <string name="shoujixinxi">手机信息：</string>
    <string name="dingweixinxi">定位信息：</string>
    <string name="dingweijingdu">定位精度</string>
    <string name="dingweifangshi">定位方式</string>
    <string name="dingweidizhi">定位地址</string>
    <string name="fuwuxinxi">服务信息：</string>
    <string name="xinhaoqiangdu">信号强度：</string>
    <string name="lishishuju">历史数据：</string>
</resources>
