<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/order_upload_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_upload_data" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/shineng"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:text="@string/shineng"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/shiwai"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:text="@string/shiwai"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTakePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="拍照"/>

            <Button
                android:id="@+id/btnSelectPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="从图库中选取"/>

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="图片路径："/>

            <TextView
                android:visibility="gone"
                android:id="@+id/tvPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="图片Uri："/>

            <TextView
                android:visibility="gone"
                android:id="@+id/tvUri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/ivPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/order_Building_location"/>

            <MultiAutoCompleteTextView
                android:id="@+id/jutilouyumingchen"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:text=""
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/menpaihao"/>

            <MultiAutoCompleteTextView
                android:id="@+id/jutimenpaihao"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:text=""
                tools:ignore="LabelFor" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDoublePicker"
                android:text="@string/order_Building_layers" />

            <LinearLayout
                android:id="@+id/switchLiner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageButton1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/plan"
                        android:contentDescription="TODO" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center"
                        android:text="@string/shifouyiyoushifenguihua" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageButton2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/lte" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center"
                        android:text="@string/shifouyouyiwangshifen" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/switchLiner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageButton3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/dianti" />

                    <Switch
                        android:id="@+id/switch3"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center"
                        android:text="@string/shifouyoudianti" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageButton4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/cheku" />

                    <Switch
                        android:id="@+id/switch4"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center"
                        android:text="@string/shifouyoudixiatingchechang" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/switchLiner3"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageButton31"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/plan" />

                    <Switch
                        android:id="@+id/switch32"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center"
                        android:text="@string/shifouyouguihua" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageButton33"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/lte" />

                    <Switch
                        android:id="@+id/switch34"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center"
                        android:text="@string/shifouyouyiwangxinhao" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/switchLiner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageButton41"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/tieta" />

                    <Switch
                        android:id="@+id/switch42"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center"
                        android:text="@string/shifouyoutieta" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageButton43"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ganlu" />

                    <Switch
                        android:id="@+id/switch44"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_gravity="center"
                        android:text="@string/shifouyouganlu" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:text="@string/problemdes"/>

            <MultiAutoCompleteTextView
                android:id="@+id/multiAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:text="@string/MultiAutoCompleteTextView" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
